[metadata]
name = instabasic
version = 0.0.2
author = Chase Austin
author_email = chase7867@gmail.com
description = A Python wrapper for the Instagram Basic Display API.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Instagram, instagram, Facebook, facebook, Meta, meta, API, api, wrapper
license = MIT
license_files = LICENSE
url = https://github.com/ChaseRun/instabasic
project_urls =
    Instagram Basic Display API Docs = https://developers.facebook.com/docs/instagram-basic-display-api
    Instagram Graph API Docs = https://developers.facebook.com/docs/instagram-api
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src